<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/qbd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.TechSky.skyduaapp.ALLduas" >

    
     <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textColor="#F8F8FF"
        android:textSize="20sp" />
    

<ScrollView android:id="@+id/ScrlView"
     android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_below="@+id/textView1" > 
      
      
      <LinearLayout  
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:orientation="vertical">
          
<Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/button2" />
     <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/button3" />
      <Button
        android:id="@+id/button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/button4" />

      <Button
          android:id="@+id/button5"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/button4"
          android:layout_centerHorizontal="true"
          android:textSize="15sp"
          android:text="@string/button5" />

      <Button
          android:id="@+id/button6"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/button5"
          android:layout_centerHorizontal="true"
          android:textSize="15sp"
          android:text="@string/button6" />
	       
          
          
          
      </LinearLayout> 
        
        
        
        
    

    
    
    
    </ScrollView>
     
          
    
    		          
          
     
</RelativeLayout>