<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qbc"
    android:orientation="vertical" >
 <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />            
    
    <ScrollView
        android:layout_width="fill_parent" android:layout_height="fill_parent" >
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">
            

            
 <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textkm"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:gravity="center" 
        android:textColor="#AFeeee"
        android:textAppearance="?android:attr/textAppearanceLarge" />
 
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:text="Masjidindua"
        android:textColor="#DAA520"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textmajin"
        android:textColor="#afeeee"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textSize="30sp"
        android:layout_gravity="center"
        
        android:text="finish" />
            
            
        </LinearLayout>
        
    </ScrollView>

   

   
</LinearLayout>
